--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -40,10 +40,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\r\n",
-      "2009-10-01\tPaper Title Number 1\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://academicpages.github.io/files/paper1.pdf\r\n",
-      "2010-10-01\tPaper Title Number 2\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://academicpages.github.io/files/paper2.pdf\r\n",
-      "2015-10-01\tPaper Title Number 3\tJournal 1\tThis paper is about the number 3. The number 4 is left for future work.\tYour Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3).\tpaper-title-number-3\thttp://academicpages.github.io/files/paper3.pdf"
+      "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\n",
+      "2023-05-14\tRevisiting Information Retrieval and Deep Learning Approaches for Code Summarization\t2023 IEEE/ACM 45th International Conference on Software Engineering: Companion Proceedings (ICSE-Companion)\t-\tZhu, T., Li, Z., Pan, M., Shi, C., Zhang, T., Pei, Y., & Li, X. (2023, May). Revisiting Information Retrieval and Deep Learning Approaches for Code Summarization. In 2023 IEEE/ACM 45th International Conference on Software Engineering: Companion Proceedings (ICSE-Companion) (pp. 328-329). IEEE.\tzhu2023revisiting\thttps://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&arnumber=10172879"
      ]
     }
    ],
@@ -97,6 +95,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -113,58 +124,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2009-10-01</td>\n",
-       "      <td>Paper Title Number 1</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 1. The number 2...</td>\n",
-       "      <td>Your Name, You. (2009). \"Paper Title Number 1....</td>\n",
-       "      <td>paper-title-number-1</td>\n",
-       "      <td>http://academicpages.github.io/files/paper1.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-10-01</td>\n",
-       "      <td>Paper Title Number 2</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 2. The number 3...</td>\n",
-       "      <td>Your Name, You. (2010). \"Paper Title Number 2....</td>\n",
-       "      <td>paper-title-number-2</td>\n",
-       "      <td>http://academicpages.github.io/files/paper2.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-10-01</td>\n",
-       "      <td>Paper Title Number 3</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 3. The number 4...</td>\n",
-       "      <td>Your Name, You. (2015). \"Paper Title Number 3....</td>\n",
-       "      <td>paper-title-number-3</td>\n",
-       "      <td>http://academicpages.github.io/files/paper3.pdf</td>\n",
+       "      <td>2023-05-14</td>\n",
+       "      <td>Revisiting Information Retrieval and Deep Lear...</td>\n",
+       "      <td>2023 IEEE/ACM 45th International Conference on...</td>\n",
+       "      <td>-</td>\n",
+       "      <td>Zhu, T., Li, Z., Pan, M., Shi, C., Zhang, T., ...</td>\n",
+       "      <td>zhu2023revisiting</td>\n",
+       "      <td>https://ieeexplore.ieee.org/stamp/stamp.jsp?tp...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     pub_date                 title      venue  \\\n",
-       "0  2009-10-01  Paper Title Number 1  Journal 1   \n",
-       "1  2010-10-01  Paper Title Number 2  Journal 1   \n",
-       "2  2015-10-01  Paper Title Number 3  Journal 1   \n",
+       "     pub_date                                              title  \\\n",
+       "0  2023-05-14  Revisiting Information Retrieval and Deep Lear...   \n",
        "\n",
-       "                                             excerpt  \\\n",
-       "0  This paper is about the number 1. The number 2...   \n",
-       "1  This paper is about the number 2. The number 3...   \n",
-       "2  This paper is about the number 3. The number 4...   \n",
+       "                                               venue excerpt  \\\n",
+       "0  2023 IEEE/ACM 45th International Conference on...       -   \n",
        "\n",
-       "                                            citation              url_slug  \\\n",
-       "0  Your Name, You. (2009). \"Paper Title Number 1....  paper-title-number-1   \n",
-       "1  Your Name, You. (2010). \"Paper Title Number 2....  paper-title-number-2   \n",
-       "2  Your Name, You. (2015). \"Paper Title Number 3....  paper-title-number-3   \n",
+       "                                            citation           url_slug  \\\n",
+       "0  Zhu, T., Li, Z., Pan, M., Shi, C., Zhang, T., ...  zhu2023revisiting   \n",
        "\n",
-       "                                         paper_url  \n",
-       "0  http://academicpages.github.io/files/paper1.pdf  \n",
-       "1  http://academicpages.github.io/files/paper2.pdf  \n",
-       "2  http://academicpages.github.io/files/paper3.pdf  "
+       "                                           paper_url  \n",
+       "0  https://ieeexplore.ieee.org/stamp/stamp.jsp?tp...  "
       ]
      },
      "execution_count": 3,
@@ -261,9 +244,9 @@
     "        md += \"\\n\" + html_escape(item.excerpt) + \"\\n\"\n",
     "    \n",
     "    if len(str(item.paper_url)) > 5:\n",
-    "        md += \"\\n[Download paper here](\" + item.paper_url + \")\\n\" \n",
+    "        md += \"\\n[paper](\" + item.paper_url + \")\\n\" \n",
     "        \n",
-    "    md += \"\\nRecommended citation: \" + item.citation\n",
+    "    md += \"\\nCitation: \" + item.citation\n",
     "    \n",
     "    md_filename = os.path.basename(md_filename)\n",
     "       \n",
@@ -363,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
