--- a/_publications/2023-09-11-ji2023vision.md
+++ b/_publications/2023-09-11-ji2023vision.md
@@ -1,6 +1,6 @@
 ---
 title: "Vision-based Widget Mapping for Test Migration across Mobile Platforms: Are We There Yet?"
-authors: "Ruihua Ji, Tingwei Zhu, Xiaoqing Zhu, Chunyang Chen, Minxue Pan, Tian Zhang"
+authors: "Ruihua Ji, <strong>Tingwei Zhu</strong>, Xiaoqing Zhu, Chunyang Chen, Minxue Pan, Tian Zhang"
 collection: publications
 permalink: /publication/2023-09-11-ji2023vision
 date: 2023-09-11
