--- a/_publications/2023-09-11-tang2023domain.md
+++ b/_publications/2023-09-11-tang2023domain.md
@@ -4,7 +4,7 @@ authors: "Ze Tang, Jidong Ge, Shangqing Liu, <strong>Tingwei Zhu</strong>, Tongt
 collection: publications
 permalink: /publication/2023-09-11-tang2023domain
 date: 2023-09-11
-venue: 'the 38th IEEE/ACM International Conference on Automated Software Engineering (ASE 2023), <em>Distinguished Paper Award</em>'
+venue: 'the 38th IEEE/ACM International Conference on Automated Software Engineering (ASE 2023), 🏆<span style="color:red;">Distinguished Paper Award</span>'
 paperurl: 
 citation: 
 ---
