--- a/_publications/2024-10-06-zhu2024empirical.md
+++ b/_publications/2024-10-06-zhu2024empirical.md
@@ -4,7 +4,7 @@ authors: "<strong>Tingwei Zhu</strong>, Tongtong Xu, Kui Liu, Jiayuan Zhou, Xing
 collection: publications
 permalink: /publication/2024-10-06-zhu2024empirical
 date: 2024-10-06
-venue: 'the 40th IEEE International Conference on Software Maintenance and Evolution (ICSME 2024)'
+venue: 'the 40th IEEE International Conference on Software Maintenance and Evolution (ICSME 2024), 🏆<span style="color:red;">Best Student Paper Award</span>'
 paperurl: 
 citation: 
 ---
